src/ui_tests/pass_nonint_arg-err.stderr
error[E0277]: the trait bound `bool: __Integer` is not satisfied
 --> src/ui_tests/pass_nonint_arg-err.rs:4:26
  |
4 |     let _ = notzero::nz!(false);
  |             -------------^^^^^-
  |             |            |
  |             |            the trait `__Integer` is not implemented for `bool`
  |             required by a bound introduced by this call
  |
  = help: the following other types implement trait `__Integer`:
            isize
            i8
            i16
            i32
            i64
            i128
            usize
            u8
          and $N others
note: required by a bound in `__nonzero_new_unwrap`
 --> src/lib.rs
  |
  | pub const fn __nonzero_new_unwrap<I, NZ>(n: I) -> NZ
  |              -------------------- required by a bound in this function
  | where
  |     I: __Integer<NonZero = NZ>,
  |        ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__nonzero_new_unwrap`
