src/ui_tests/pass_nonint_arg-err.rs
#![feature(inline_const)]

fn main() {
    let _ = notzero::nz!(false);
}